--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ CLOUDINARY_CLOUD_NAME=dsetq9exy
 CLOUDINARY_API_KEY=623973573732474
 CLOUDINARY_API_SECRET=O5YJqt6yaDdYq8twuU9ZQHAP5Xw
 
-FRONTEND_URL=http://localhost:5173
-GATEWAY_URL=http://localhost:4000
+FRONTEND_URL=http://192.168.0.103:5173
+GATEWAY_URL=http://192.168.0.103:4000
